fixed spacing on stories page

--- a/styles/diet.css
+++ b/styles/diet.css
@@ -227,7 +227,7 @@ img{
 }
 
 .btns{
-  margin:0 auto 0 auto;
+  margin:20px auto 0 auto;
 }
 .btn a{
   text-decoration: none;
